<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D65050"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/moneyInfo"
        android:layout_width="317dp"
        android:layout_height="52dp"
        android:background="@color/purple_500"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/money_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.731" />

    <Button
        android:id="@+id/addMoney"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:drawableEnd="@drawable/kolikko2"
        android:onClick="addMoney"
        android:text="@string/add_money"
        android:textColor="@color/grey"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/printReceipt"
        android:layout_width="109dp"
        android:layout_height="57dp"
        android:onClick="printReceipt"
        android:text="@string/receipt"
        android:textColor="@color/grey"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/returnMoney"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/returnMoney"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:drawableEnd="@drawable/kolikko2"
        android:onClick="returnMoney"
        android:text="@string/return_money"
        android:textColor="@color/grey"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/addMoney"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="231dp"
        android:layout_height="162dp"
        android:background="#FFFFFF"
        android:fadingEdge="none"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/placeholder_text"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:background="@android:color/background_light"
        android:indeterminate="false"
        android:max="10"
        android:progress="1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:tickMarkTint="@color/grey" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="288dp"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <ImageView
        android:id="@+id/Cocacola"
        android:layout_width="92dp"
        android:layout_height="171dp"
        android:contentDescription="@string/content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/cocacola" />

    <ImageView
        android:id="@+id/fanta"
        android:layout_width="117dp"
        android:layout_height="170dp"
        android:contentDescription="@string/content_desc3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/fanta" />

    <ImageView
        android:id="@+id/pepsi"
        android:layout_width="98dp"
        android:layout_height="171dp"
        android:contentDescription="@string/content_desc2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/pepsi" />

    <Button
        android:id="@+id/button"
        android:layout_width="69dp"
        android:layout_height="45dp"
        android:onClick="buyBottle"
        android:text="@string/buy_button_text"
        app:backgroundTint="#003288"
        app:layout_constraintBottom_toTopOf="@+id/moneyInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/Cocacola"
        app:layout_constraintVertical_bias="0.738" />

    <TextView
        android:id="@+id/bottleInfo"
        android:layout_width="287dp"
        android:layout_height="57dp"
        android:background="#77241E"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bottle_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fanta"
        app:layout_constraintVertical_bias="0.836" />

</androidx.constraintlayout.widget.ConstraintLayout>